fixed overlapping header when jumping to element

--- a/CSS/specials.css
+++ b/CSS/specials.css
@@ -1,4 +1,3 @@
-
 ul li {
 	margin-bottom:3em;
 }
@@ -101,6 +100,15 @@ section h4 {
 .jump-to-top:hover {
 	transform:scale(1.1);
 }
+/* adjust link to element */
+h2 {
+	position:relative;
+}
+h2 span {
+	position:absolute;
+	top:-10rem;
+}
+/* style date pointer */
 .pointer {
 	width: 0;
 	height: 0;
